[package]
name = "teonite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.35"
dotenv = "0.15.0"
reqwest = { version = "0.11.25", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["serde_derive", "derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
